Fix bug where astronauts z-index is higher than z-index of text

--- a/scss/components/sections/_astronaut.scss
+++ b/scss/components/sections/_astronaut.scss
@@ -7,6 +7,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    z-index: 1;
   }
 }
 #helmet {
